[package]
name = "actix-maud-htmx-h5bp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5"
actix-web = "3"
maud = { version="0.23", features = ["actix-web"] }
serde = { version = "1", features = ["derive"] }
